# qrab

./: Cargo.toml  README.md
examples/simple-vm/: Cargo.toml
examples/simple-vm/src/: main.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
projects/dashboard/: .gitignore  Cargo.toml  Dioxus.toml
projects/dashboard/src/: main.rs
projects/manager/: Cargo.toml
projects/manager/src/: lib.rs  vm.rs
projects/manager/src/utils/: mod.rs
projects/protodbschema/: Cargo.toml
projects/protodbschema/src/: event.rs  hypervisor.rs  lib.rs  vm.rs
projects/qapi/: Cargo.toml
projects/qapi-old-hack/: Cargo.toml
projects/qapi-old-hack/src/: lib.rs  traits.rs
projects/qapi-old-hack/src/versions/v1_1_0/commands/: mod.rs  qmp_capabilities.rs
projects/qapi-old-hack/src/versions/v1_1_0/enums/: mod.rs  qmp_capability.rs
projects/qapi-old-hack/src/versions/v1_1_0/structs/: mod.rs  version_triple.rs
projects/qapi-spec-parser/: Cargo.toml
projects/qapi-spec-parser/src/: codegen.rs  helpers.rs  main.rs  qapi_alternate.rs  qapi_alternative.rs  qapi_alternatives.rs  qapi_bool.rs  qapi_branch.rs  qapi_branches.rs  qapi_command.rs  qapi_cond.rs  qapi_documentation.rs  qapi_enum.rs  qapi_enum_value.rs  qapi_event.rs  qapi_feature.rs  qapi_features.rs  qapi_include.rs  qapi_member.rs  qapi_members.rs  qapi_pragma.rs  qapi_schema.rs  qapi_string.rs  qapi_struct.rs  qapi_type_ref.rs  qapi_union.rs
projects/qapi-spec-parser/src/codegen/: mod.rs  process_qapi.rs  rust_enum.rs  rust_struct.rs
projects/qapi-spec-parser/src/parsers/: mod.rs  qapi_alternate.rs  qapi_alternative.rs  qapi_alternatives.rs  qapi_branch.rs  qapi_branches.rs  qapi_command.rs  qapi_cond.rs  qapi_documentation.rs  qapi_enum.rs  qapi_enum_value.rs  qapi_event.rs  qapi_feature.rs  qapi_features.rs  qapi_include.rs  qapi_member.rs  qapi_members.rs  qapi_pragma.rs  qapi_schema.rs  qapi_struct.rs  qapi_type_ref.rs  qapi_union.rs
projects/qapi-spec-parser/src/qapi_ir/: mod.rs  process_qapi.rs  rust_enum.rs  rust_struct.rs
projects/qapi-spec-parser/src/qir/: process_qapi.rs
projects/qapi/src/: lib.rs
projects/qmp/: Cargo.toml
projects/qmp/src/: lib.rs
projects/server/: Cargo.toml
projects/server/src/: db.rs  hypervisor.rs  main.rs  systemd.rs
