[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
surrealdb = "1.5.4"

[dependencies.qmp]
version = "0.1.0"
path = "../qmp"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.nix]
version = "0.29"
features = ["fs", "process", "sched", "signal", "user"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
#features = ["macros", "rt-multi-thread", "time", "net", "full"]
features = ["full"]
