[package]
name = "qmp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"

[dependencies.qapi-old-hack]
version = "0.1.0"
path = "../qapi-old-hack"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
#features = ["macros", "rt-multi-thread", "time", "net"]
